2002-12-10  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/dl-librecon.h (EXTRA_LD_ENVVARS): Refer to
	and move contents to ...
	(EXTRA_LD_ENVVARS_LINUX): ... this new macro.  Add break for nonmatch.
	* sysdeps/unix/sysv/linux/i386/dl-librecon.h (EXTRA_LD_ENVVARS): Use
	it instead of duplicating its contents.
	(EXTRA_LD_ENVVARS): Likewise.  Add break for nonmatch.

2002-12-09  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-support.c (_dl_non_dynamic_init): Add DL_OSVERSION_INIT if
	defined.
	* sysdeps/unix/sysv/linux/dl-librecon.h (_dl_osversion_init): New
	function.
	(EXTRA_LD_ENVVARS): Use it.
	(DL_OSVERSION_INIT): Define.
	* sysdeps/unix/sysv/linux/i386/dl-librecon.h: Include linux
	dl-librecon.h.
	(EXTRA_LD_ENVVARS): Undef before defining.  Use _dl_osversion_init.

2002-12-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/closedir.c (__closedir): Remove __libc_lock_lock
	call.  It is not allowed to destroy pthread mutexes which are
	still in use even though it is safe for our implementations.  If
	somebody still uses the descriptor it is a bug.

2002-12-09  Richard Henderson  <rth@redhat.com>

	* csu/abi-note.S: Use .p2align, not .align.

2002-12-09  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/syscalls.list: Add __libc_creat and
	__libc_select aliases.

	* sysdeps/unix/sysv/linux/sigwaitinfo.c: Define __libc_sigwaitinfo
	alias.

	* sysdeps/unix/sysv/linux/sigwait.c: Define __libc_sigwait alias.

	* sysdeps/unix/sysv/linux/sigsuspend.c: Define __libc_sigsuspend alias.

	* sysdeps/unix/sysv/linux/poll.c: Define __libc_poll alias.

	* sysdeps/unix/syscalls.list: Define __libc_select alias.

	* sysdeps/posix/waitid.c: Define __libc_waitid alias.

	* sysdeps/posix/sigpause.c: Define __libc_sigpause and
	__libc___xpg_sigpause aliases.

	* sysdeps/generic/pselect.c: Define __libc_pselect alias.

	* misc/error.c: Remove use of USE_IN_LIBIO.

2002-12-08  Roland McGrath  <roland@redhat.com>
